# duckdb

benchmark/: CMakeLists.txt  custom_runner.cpp
benchmark/tpch/parquet/: tpch_parquet_sf1.benchmark.in  tpch_parquet_sf1_q01.benchmark  tpch_parquet_sf1_q02.benchmark  tpch_parquet_sf1_q03.benchmark  tpch_parquet_sf1_q04.benchmark  tpch_parquet_sf1_q05.benchmark  tpch_parquet_sf1_q06.benchmark  tpch_parquet_sf1_q07.benchmark  tpch_parquet_sf1_q08.benchmark  tpch_parquet_sf1_q09.benchmark  tpch_parquet_sf1_q10.benchmark  tpch_parquet_sf1_q11.benchmark  tpch_parquet_sf1_q12.benchmark  tpch_parquet_sf1_q13.benchmark  tpch_parquet_sf1_q14.benchmark  tpch_parquet_sf1_q15.benchmark  tpch_parquet_sf1_q16.benchmark  tpch_parquet_sf1_q17.benchmark  tpch_parquet_sf1_q18.benchmark  tpch_parquet_sf1_q19.benchmark  tpch_parquet_sf1_q20.benchmark  tpch_parquet_sf1_q21.benchmark  tpch_parquet_sf1_q22.benchmark
test/include/arrow/: arrow_test_helper.hpp
